RESOLVED FIXED293023
REGRESSION (292403@main?): [ macOS wk2 ] http/wpt/content-security-policy/sandbox-manifest-blocked-cross-origin.sub.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=293023
Summary REGRESSION (292403@main?): [ macOS wk2 ] http/wpt/content-security-policy/san...
Karl Rackler
Reported 2025-05-14 17:08:41 PDT
Description: http/wpt/content-security-policy/sandbox-manifest-blocked-cross-origin.sub.html The test returns Status code: 200. The test fails within range https://commits.webkit.org/compare/292406@main...292402@main. This issue can be reproduced using command: run-webkit-tests --release --iterations 50 --no-retry --force -f http/wpt/content-security-policy/sandbox-manifest-blocked-cross-origin.sub.html History: https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fcontent-security-policy%2Fsandbox-manifest-blocked-cross-origin.sub.html&platform=mac Diff: @@ -1,5 +1,5 @@ http://localhost:8800/WebKit/content-security-policy/sandbox-manifest-blocked-cross-origin.sub.html - didFinishLoading +http://127.0.0.1:8800/WebKit/content-security-policy/manifest.json - didFailLoadingWithError: <NSError domain , code 0, failing URL "http://127.0.0.1:8800/WebKit/content-security-policy/manifest.json"> CONSOLE MESSAGE: Origin null is not allowed by Access-Control-Allow-Origin. Status code: 200 -http://127.0.0.1:8800/WebKit/content-security-policy/manifest.json - didFailLoadingWithError: <NSError domain , code 0, failing URL "http://127.0.0.1:8800/WebKit/content-security-policy/manifest.json"> CONSOLE MESSAGE: Fetched manifest: http://127.0.0.1:8800/WebKit/content-security-policy/manifest.json
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-14 17:08:53 PDT
EWS
Comment 2 2025-05-14 17:21:49 PDT
Test gardening commit 294936@main (cd19381dbe84): <https://commits.webkit.org/294936@main> Reviewed commits have been landed. Closing PR #45407 and removing active labels.
Alex Christensen
Comment 3 2025-05-16 12:10:00 PDT
EWS
Comment 4 2025-05-19 20:02:58 PDT
Committed 295140@main (f9f17092cc2b): <https://commits.webkit.org/295140@main> Reviewed commits have been landed. Closing PR #45502 and removing active labels.
Alex Christensen
Comment 5 2025-05-21 10:24:54 PDT
*** Bug 293132 has been marked as a duplicate of this bug. ***
Alex Christensen
Comment 6 2025-05-21 10:25:06 PDT
*** Bug 293142 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.