REGRESSION (292403@main?): [ macOS wk2 ] http/wpt/content-security-policy/sandbox-manifest-blocked-cross-origin.sub.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=293023 rdar://151343192

Reviewed by Brady Eidson.

Make WKBundlePagePostMessageIgnoringFullySynchronousMode use IPC::SendOption::DispatchMessageEvenWhenWaitingForSyncReply
like Messages::WebPageProxy::AddMessageToConsoleForTesting does to make the different methods of adding output
from layout tests interleave deterministically.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::sendMessageImpl):
* Source/WebKit/Platform/IPC/Connection.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::postMessageIgnoringFullySynchronousMode):

Canonical link: https://commits.webkit.org/295140@main